[package]
edition = "2021"
name    = "secret-ops"
version = "0.1.0"


[features]
infisical = ["dep:aes-gcm", "dep:base64", "dep:hex", "dep:reqwest"]


[dependencies]
aes-gcm     = { version = "0.10.2", optional = true }
async-trait = { version = "0.1.68" }
base64      = { version = "0.21.2", optional = true }
envy        = { version = "0.4.2" }
hex         = { version = "0.4.3", optional = true }
reqwest     = { version = "0.11.18", optional = true, features = ["json"] }
serde       = { version = "1.0.163", features = ["derive"] }
thiserror   = { version = "1.0.40" }
